core api add missing param

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -521,6 +521,8 @@ paths:
 
 
   /courses/{courseId}/students:
+    parameters:
+      - $ref: '#/parameters/CourseId'
     post:
       summary: Add the given students to this course
       tags:
