--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -25,7 +25,7 @@ tags:
 paths:
 
   /account/personal:
-    get:
+    post:
       summary: Get all system management notifications.
       tags:
         - common
@@ -33,35 +33,13 @@ paths:
         200:
           description: System management notifications (messages).
           schema:
-            type: array
-            items:
-              properties:
-                message:
-                  type: string
-    post:
-      summary: "Update account data in easy:core.
-      Creates account if it does not exist. If the account does not exist,
-      then this must be called before any other services."
-      tags:
-        - common
-      parameters:
-        - name: account
-          in: body
-          schema:
             properties:
-              email:
-                type: string
-              first_name:
-                type: string
-              last_name:
-                type: string
-            required:
-              - email
-              - first_name
-              - last_name
-      responses:
-        200:
-          description: Updated.
+              messages:
+                type: array
+                items:
+                  properties:
+                    message:
+                      type: string
 
 
   /management/notifications:
@@ -73,13 +51,15 @@ paths:
         200:
           description: System management notifications (messages).
           schema:
-            type: array
-            items:
-              properties:
-                id:
-                  type: string
-                message:
-                  type: string
+            properties:
+              messages:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: string
+                    message:
+                      type: string
     post:
       summary: Create new system management notification.
       tags:
@@ -96,6 +76,7 @@ paths:
       responses:
         200:
           description: Notification created.
+
 
   /management/notifications/{notificationId}:
     parameters:
