EZ-1082 /account/personal -> /account/checkin

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -24,7 +24,7 @@ tags:
 
 paths:
 
-  /account/personal:
+  /account/checkin:
     post:
       summary: Get all system management notifications.
       tags:
