EZ-1051 refactor student read courses + create tests + update api

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -130,9 +130,11 @@ paths:
         200:
           description: Course summaries.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/StudentCourse'
+            properties:
+              courses:
+                type: array
+                items:
+                  $ref: '#/definitions/StudentCourse'
 
 
   /courses/{courseId}/basic:
