EZ-1051 refactor teacher read courses + create tests + update api

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -294,9 +294,11 @@ paths:
         200:
           description: Course summaries.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/TeacherCourse'
+            properties:
+              courses:
+                type: array
+                items:
+                  $ref: '#/definitions/TeacherCourse'
 
 
   /teacher/courses/{courseId}/exercises:
