EZ-1051 refactor add student to course + update tests + update api + update error handling

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -723,9 +723,13 @@ paths:
           in: body
           schema:
             description: Student ids.
-            type: array
-            items:
-              type: string
+            properties:
+              students:
+                type: array
+                items:
+                  properties:
+                    student_id:
+                      type: string
       responses:
         200:
           description: Students added.
