--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -166,9 +166,11 @@ paths:
         200:
           description: Exercise summaries.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/StudentExercise'
+            properties:
+              exercises:
+                type: array
+                items:
+                  $ref: '#/definitions/StudentExercise'
 
 
   /student/courses/{courseId}/exercises/{courseExerciseId}:
