EZ-1051 refactor teacher read all submissions

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -665,9 +665,11 @@ paths:
         300:
           description: Submissions.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/TeacherSubmission'
+            properties:
+              submissions:
+                type: array
+                items:
+                  $ref: '#/definitions/TeacherSubmission'
 
 
   /courses/{courseId}/participants:
