--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -310,7 +310,6 @@ paths:
   /teacher/courses/{courseId}/exercises:
     parameters:
       - $ref: '#/parameters/CourseId'
-
     get:
       summary: Get this course's exercises.
       tags:
@@ -319,9 +318,11 @@ paths:
         200:
           description: Exercises.
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/TeacherCourseExercise'
+            properties:
+              course_exercise:
+                type: array
+                items:
+                  $ref: '#/definitions/TeacherCourseExercise'
 
 
     post:
