--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -203,6 +203,21 @@ paths:
             $ref: '#/definitions/Submission'
 
 
+  /student/courses/{courseId}/exercises/{courseExerciseId}/submissions/latest/await:
+    parameters:
+      - $ref: '#/parameters/CourseId'
+      - $ref: '#/parameters/CourseExerciseId'
+    get:
+      summary: Get and wait for the latest submission's details to the specified course exercise.
+      tags:
+        - student
+      responses:
+        200:
+          description: Latest submission to this exercise.
+          schema:
+            $ref: '#/definitions/Submission'
+
+
   /student/courses/{courseId}/exercises/{courseExerciseId}/submissions:
     parameters:
       - $ref: '#/parameters/CourseId'
