--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -203,6 +203,33 @@ paths:
             $ref: '#/definitions/Submission'
 
 
+  /student/courses/{courseId}/exercises/{courseExerciseId}/submissions/draft:
+    parameters:
+      - $ref: '#/parameters/CourseId'
+      - $ref: '#/parameters/CourseExerciseId'
+    get:
+      summary: Get the latest submission's draft to the specified course exercise.
+      tags:
+        - student
+      responses:
+        200:
+          description: Get the latest submission draft of this exercise.
+          schema:
+            $ref: '#/definitions/SubmissionDraft'
+    post:
+      summary: Upload new submission's draft to the specified course exercise.
+      tags:
+        - student
+      parameters:
+        - name: submission
+          in: body
+          schema:
+            $ref: '#/definitions/SubmissionDraft'
+      responses:
+        200:
+          description: Submission draft uploaded.
+
+
   /student/courses/{courseId}/exercises/{courseExerciseId}/submissions/latest/await:
     parameters:
       - $ref: '#/parameters/CourseId'
@@ -1137,6 +1164,14 @@ definitions:
       feedback_teacher:
         description: Optional, exists if the submission has been graded by a teacher.
         type: string
+
+  SubmissionDraft:
+    properties:
+      solution:
+        type: string
+      created_at:
+        type: string
+        format: date-time
 
   TeacherCourse:
     properties:
