EZ-1099 update api

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -224,7 +224,9 @@ paths:
         - name: submission
           in: body
           schema:
-            $ref: '#/definitions/SubmissionDraft'
+            properties:
+              solution:
+                type: string
       responses:
         200:
           description: Submission draft uploaded.
