--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -188,19 +188,57 @@ paths:
             $ref: '#/definitions/StudentExerciseDetails'
 
 
-  /student/courses/{courseId}/exercises/{courseExerciseId}/submissions/latest:
+  /student/courses/{courseId}/exercises/{courseExerciseId}/submissions/all:
     parameters:
       - $ref: '#/parameters/CourseId'
       - $ref: '#/parameters/CourseExerciseId'
     get:
-      summary: Get the latest submission's details to the specified course exercise.
+      parameters:
+        - $ref: '#/parameters/Limit'
+        - $ref: '#/parameters/Offset'
+      summary: Get submissions to this course exercise.
       tags:
         - student
       responses:
         200:
-          description: Latest submission to this exercise.
+          description: Submissions.
           schema:
-            $ref: '#/definitions/Submission'
+            properties:
+              submissions:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: string
+                    solution:
+                      type: string
+                    submission_time:
+                      type: string
+                      format: date-time
+                    autograde_status:
+                      $ref: '#/definitions/AutogradeStatus'
+                    grade_auto:
+                      description: Exists if the submission has been automatically graded.
+                      type: integer
+                    feedback_auto:
+                      description: Exists if the submission has been automatically graded.
+                      type: string
+                    grade_teacher:
+                      description: Exists if the submission has been graded by a teacher.
+                      type: integer
+                    feedback_teacher:
+                      description: Exists if the submission has been graded by a teacher.
+                      type: string
+                  required:
+                    - id
+                    - solution
+                    - submission_time
+                    - autograde_status
+              count:
+                type: integer
+            required:
+              - submissions
+              - count
 
 
   /student/courses/{courseId}/exercises/{courseExerciseId}/draft:
@@ -244,7 +282,33 @@ paths:
         200:
           description: Latest submission to this exercise.
           schema:
-            $ref: '#/definitions/Submission'
+            properties:
+              id:
+                type: string
+              solution:
+                type: string
+              submission_time:
+                type: string
+                format: date-time
+              autograde_status:
+                $ref: '#/definitions/AutogradeStatus'
+              grade_auto:
+                description: Exists if the submission has been automatically graded.
+                type: integer
+              feedback_auto:
+                description: Exists if the submission has been automatically graded.
+                type: string
+              grade_teacher:
+                description: Exists if the submission has been graded by a teacher.
+                type: integer
+              feedback_teacher:
+                description: Exists if the submission has been graded by a teacher.
+                type: string
+            required:
+              - id
+              - solution
+              - submission_time
+              - autograde_status
 
 
   /student/courses/{courseId}/exercises/{courseExerciseId}/submissions:
@@ -1156,31 +1220,6 @@ definitions:
       - effective_title
       - grader_type
       - threshold
-
-  Submission:
-    properties:
-      # TODO: serial needed for what?
-      #      serial:
-      #        type: integer
-      solution:
-        type: string
-      submission_time:
-        type: string
-        format: date-time
-      autograde_status:
-        $ref: '#/definitions/AutogradeStatus'
-      grade_auto:
-        description: Optional, exists if the submission has been automatically graded.
-        type: integer
-      feedback_auto:
-        description: Optional, exists if the submission has been automatically graded.
-        type: string
-      grade_teacher:
-        description: Optional, exists if the submission has been graded by a teacher.
-        type: integer
-      feedback_teacher:
-        description: Optional, exists if the submission has been graded by a teacher.
-        type: string
 
   SubmissionDraft:
     properties:
