--- a/core/build.gradle
+++ b/core/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.6'
