--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -546,8 +546,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/definitions/TeacherCourseExercise'
-
-
     post:
       summary: Add exercise to this course.
       tags:
@@ -572,6 +570,8 @@ paths:
               assessments_student_visible:
                 type: boolean
               instructions_html:
+                type: string
+              instructions_adoc:
                 type: string
               title_alias:
                 type: string
