EZ-1202 integrate get /teacher/courses/{courseId}/exercises/{courseExerciseId}

--- a/doc/core/api.yaml
+++ b/doc/core/api.yaml
@@ -664,7 +664,11 @@ paths:
                 type: string
               instructions_html:
                 type: string
+              instructions_adoc:
+                type: string
               text_html:
+                type: string
+              text_adoc:
                 type: string
               soft_deadline:
                 type: string
